safety commit. Working on rpc client builder.