@@ -7,10 +7,7 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
 import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -32,12 +29,27 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
         currentFile.setTargetPackage("package " + resolvePackage(toConstruct) + END);
     }
 
+    /**
+     * Resolve and return the interfaces the generated class should implement.
+     *
+     * @param toConstruct
+     * @return
+     */
+    public List<String> resolveImplements(Class toConstruct) {
+        return List.of(toConstruct.getSimpleName());
+    }
+
     @Override
     public void buildClassSignature(Class toConstruct) {
         List<String> classAnnotations = resolveClassAnnotations(toConstruct);
         currentFile.getClassSignature().addAll(classAnnotations);
 
-        String signature =  "public class " + resolveClassName(toConstruct);
+        List<String> implementList = resolveImplements(toConstruct);
+
+        String signature = "public class " + resolveClassName(toConstruct);
+        if (!implementList.isEmpty()) {
+            signature += (" implements " + implementList.stream().collect(Collectors.joining(", ")));
+        }
         currentFile.getClassSignature().add(signature);
     }
 
@@ -69,6 +81,24 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
         }
         methodBuilder.append(annotationString);
         methodBuilder.append(this.resolveParameterTypeAndName(method, parameter));
+        checkAndImport(parameter.getType().getName());
+    }
+
+    /**
+     * Checks if the type needs to be imported, and if so, adds it to the list of imports.
+     * @param fullyQualifiedName
+     */
+    protected void checkAndImport(String fullyQualifiedName){
+
+        String paramPackage = fullyQualifiedName;
+        int index = paramPackage.lastIndexOf(".");
+        paramPackage = fullyQualifiedName.substring(0, index);
+
+        Objects.requireNonNull(currentFile.getTargetPackage(), "package statement should have been set by now!");
+        if (!Objects.equals(paramPackage, currentFile.getTargetPackage())
+                && !Objects.equals("java.lang", paramPackage)) { // never import java.lang
+            currentFile.getImports().add(fullyQualifiedName);
+        }
     }
 
     @Override
@@ -116,16 +146,18 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
 
     /**
      * Resolve the annotations for the given method. Each annotation should be on a separate entry in the returned list.
+     * Default implementation returns an empty list.
      *
      * @param method the method to generate annotations for.
      * @return list of strings, each a valid, compiling annotation.
      */
     protected List<String> resolveMethodAnnotations(Method method) {
-        return Collections.emptyList();
+        return List.of("@Override");
     }
 
     /**
      * Resolves the annoations for the provided method and parameter.
+     * Default implementation returns an empty list.
      *
      * @return
      */
@@ -166,6 +198,7 @@ public abstract class JavaSourceBuilder implements SourceCodeBuilder {
                     this.delegate = {2};
                 '}'""", className, paramType, paramName);
         currentFile.getConstructors().add(constructor);
+        checkAndImport(toConstruct.getName());
     }
 
 
